--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -466,28 +466,44 @@ npc:
   special-abilities: 
   - title: Sorcerer Spellcasting
   - abilities: 
-    - sorcery points: 20, 
-    - spell dc: 20
-    - cantrips: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
-    - 1st Level: Charm Person, Magic Missle, Shield, Mage Armor
-    - 2nd Level: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
-    - 3rd Level: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
-    - 4th Level: Banishment, Dimension Door, Polymorph, Wall of Fire
-    - 5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
-    - 6th Level: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
-    - 7th Level: Finger of Death, Fire Storm, Plane Shift
-    - 8th Level: Incendiary Cloud, Earthquake, Power Word Stun
-    - 9th Level: Gate, Power Word Kill, Time Stop
+    - title: Sorcery Points
+    - description: 20 
+    - title: Spell DC
+    - description: 20
+    - title: Cantrips
+    - description: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
+    - title: 1st Level
+    - description: Charm Person, Magic Missle, Shield, Mage Armor
+    - title: 2nd Level
+    - description: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
+    - title: 3rd Level
+    - descriptionm: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
+    - title: 4th Level
+    - description: Banishment, Dimension Door, Polymorph, Wall of Fire
+    - title: 
+    - description: 5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
+    - title: 6th Level
+    - description: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
+    - title: 7th Level
+    - descripton: Finger of Death, Fire Storm, Plane Shift
+    - title: 8th Level
+    - description: Incendiary Cloud, Earthquake, Power Word Stun
+    - title: 9th Level
+    - description: Gate, Power Word Kill, Time Stop
   - title: MetaMagic
   - decription: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
   - abilities:
-    - empowered spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
-                      Spell even if you have already used a different Metamagic option during the casting of the spell.
-    - heightened spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
+    - title: Empowered Spell
+    - description: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
+                   Spell even if you have already used a different Metamagic option during the casting of the spell.
+    - title: Heightened Spell
+    - description: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
                         against the spell.
-    - subtle spell: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
-    - etwinned spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
-                      same spell (1 sorcery point if the spell is a cantrip)
+    - title: Subtle Spell
+    - description: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
+    - title: Twinned spell
+    - description: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
+                   same spell (1 sorcery point if the spell is a cantrip)
   - title: Sorcerous Restoration
   - description: you regain 4 expended sorcery points whenever you finish a Short Rest
   - title: Shadow Magic Abilities
