--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -480,8 +480,8 @@ npc:
     - descriptionm: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
     - title: 4th Level
     - description: Banishment, Dimension Door, Polymorph, Wall of Fire
-    - title: 
-    - description: 5th Level: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
+    - title: 5th level
+    - description: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
     - title: 6th Level
     - description: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
     - title: 7th Level
