--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -345,7 +345,7 @@ npc:
     introduction: A withered elderly woman glares across the courtyard, /"Have you decided to join our little family, dearies?/"
 
     #
-    # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
+    # Appearance: a brief content of the character skin, clothes, hair, eyes, etc.
     #
     # Required.
     # Max 120 characters.
@@ -467,55 +467,55 @@ npc:
   - title: Sorcerer Spellcasting
   - abilities: 
     - title: Sorcery Points
-    - description: 20 
+    - content: 20 
     - title: Spell DC
-    - description: 20
+    - content: 20
     - title: Cantrips
-    - description: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
+    - content: Fire Bolt, Mage Hand, Shocking Grasp, Minor Illusion, Message, Chill Touch
     - title: 1st Level
-    - description: Charm Person, Magic Missle, Shield, Mage Armor
+    - content: Charm Person, Magic Missle, Shield, Mage Armor
     - title: 2nd Level
-    - description: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
+    - content: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
     - title: 3rd Level
-    - descriptionm: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
+    - contentm: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
     - title: 4th Level
-    - description: Banishment, Dimension Door, Polymorph, Wall of Fire
+    - content: Banishment, Dimension Door, Polymorph, Wall of Fire
     - title: 5th level
-    - description: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
+    - content: Cloudkill, Cone of Cold, Dominate Person, Teleportation Circle
     - title: 6th Level
-    - description: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
+    - content: Chain Lightning, Disintegrate, Circle of Death, Mass Suggestion
     - title: 7th Level
     - descripton: Finger of Death, Fire Storm, Plane Shift
     - title: 8th Level
-    - description: Incendiary Cloud, Earthquake, Power Word Stun
+    - content: Incendiary Cloud, Earthquake, Power Word Stun
     - title: 9th Level
-    - description: Gate, Power Word Kill, Time Stop
+    - content: Gate, Power Word Kill, Time Stop
   - title: MetaMagic
   - decription: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
   - abilities:
     - title: Empowered Spell
-    - description: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
+    - content: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
                    Spell even if you have already used a different Metamagic option during the casting of the spell.
     - title: Heightened Spell
-    - description: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
-                        against the spell.
+    - content: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
+                   against the spell.
     - title: Subtle Spell
-    - description: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
+    - content: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
     - title: Twinned spell
-    - description: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
+    - content: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
                    same spell (1 sorcery point if the spell is a cantrip)
   - title: Sorcerous Restoration
-  - description: you regain 4 expended sorcery points whenever you finish a Short Rest
+  - content: you regain 4 expended sorcery points whenever you finish a Short Rest
   - title: Shadow Magic Abilities
   - abilities:
     - title: eyes of the dark
-    - description: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
+    - content: you have darkvision with a range of 120 feet. When you reach 3rd level in this class, you learn the Darkness spell, which doesn't count against your number of sorcerer spells known. In addition, you 
                    can cast it by spending 2 sorcery points or by expending a spell slot. If you cast it with sorcery points, you can see through the darkness created by the spell.
     - title: strength of the grave
-    - description: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
+    - content: When damage reduces you to 0 hit points, you can make a Charisma saving throw (DC 5 + the damage taken). On a success, you instead drop to 1 hit point. You can't use this feature if you are 
                    reduced to 0 hit points by radiant damage or by a critical hit. After the saving throw succeeds, you can't use this feature again until you finish a long rest.
   - title: Hound of ill omen
-  - description: You gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
+  - content: You gain the ability to call forth a howling creature of darkness to harass your foes. As a bonus action, you can spend 3 sorcery points to summon a hound of ill omen to target one creature you can see within 120 feet of you. The hound uses the dire wolf’s statistics, with the following changes
   - additional-information:
     - The hound is size Medium, not Large, and it counts as a monstrosity, not a beast.
     - It appears with a number of temporary hit points equal to half your sorcerer level.
@@ -525,25 +525,25 @@ npc:
       can use its action only to attack its target. The hound can make opportunity attacks, but only against its target. Additionally, while the hound is within 5 feet of the target, the target has 
       disadvantage on saving throws against any spell you cast. The hound disappears if it is reduced to 0 hit points, if its target is reduced to 0 hit points, or after 5 minutes.
   - title: Shadow walk
-  - description: You gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
+  - content: You gain the ability to step from one shadow into another. When you are in dim light or darkness, as a bonus action, you can teleport up to 120 feet to an unoccupied space you can see that is also in dim 
                  light or darkness.
   - title: Umbral form
-  - description: You can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
+  - content: You can spend 6 sorcery points as a bonus action to transform yourself into a shadowy form. In this form, you have resistance to all damage except force and radiant damage, and you can move through other 
                  creatures and objects as if they were difficult terrain. You take 5 force damage if you end your turn inside an object. You remain in this form for 1 minute. It ends early if you are incapacitated, if you 
                  die, or if you dismiss it as a bonus action.
   - title: Shadow sorcerer quirks 
-  - description: When you are asleep, you don't appear to breathe (though you must still breathe to survive).
+  - content: When you are asleep, you don't appear to breathe (though you must still breathe to survive).
   - title: Legendary resistance
-  - description: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
+  - content: (3/Day), If Anastasia Dumas fails a saving throw she can choose to succeed instead 
   - title: Legendary Actions
-  - description: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn.
+  - content: Anastasia Dumas can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. Anastasia Dumas regains spent Legendary Actions at the start of her turn.
   - additional-information:
     - title: devils portal
-    - description: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
+    - content: Anastasia can cast Gate, opening a portal and send one person who fails a DC 15 Dexterity directly to the realm of her master for 1 minute
     - title: cantrips
-    - description: Anastasia Dumas casts a cantrip
+    - content: Anastasia Dumas casts a cantrip
     - title: family reserve
-    - description: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
+    - content: Anastasia Dumas can cast Gate, opening up to 5 portals to summon other members of the Dumas Family to join the fight   
 
   attacks: |
     Spellcasting
