--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -491,7 +491,7 @@ npc:
     - title: 9th Level
     - content: Gate, Power Word Kill, Time Stop
   - title: MetaMagic
-  - decription: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
+  - content: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
   - abilities:
     - title: Empowered Spell
     - content: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
