--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -477,7 +477,7 @@ npc:
     - title: 2nd Level
     - content: Detect Thoughts, Hold Person, Scorching Ray, Shatter, Darkness
     - title: 3rd Level
-    - contentm: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
+    - content: Fireball, Counterspell, Lightning Bolt, Slow, Fly, Dispel Magic, Blink
     - title: 4th Level
     - content: Banishment, Dimension Door, Polymorph, Wall of Fire
     - title: 5th level
