--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -517,7 +517,7 @@ npc:
       - content: Can tak a bonus action on each turn to Hide, Disengage or Dash
       - title: Uncanny Dodge
       - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage       
-    - title: Scout Abilities:
+    - title: Scout Abilities
     - abilities:
       - title: Skirmisher
       - content: Can move half her speed as a reaction when an enemy ends a turn within 5 feet of her. This movement does not provoke an opportunity attack          
