--- a/npcs/aeureek_potomach.yaml
+++ b/npcs/aeureek_potomach.yaml
@@ -492,7 +492,7 @@ npc:
   - abilities:
     - title: Arcane Recovery
     - content: After a short rest can recover a spell slot up to 3rd level
-    - title: Spellcasting:
+    - title: Spellcasting
     - abilities:
       - title: Spell DC
       - content: 14
