--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -495,7 +495,7 @@ npc:
   - abilities:
     - title: Empowered Spell
     - content: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
-                   Spell even if you have already used a different Metamagic option during the casting of the spell.
+               Spell even if you have already used a different Metamagic option during the casting of the spell.
     - title: Heightened Spell
     - content: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
                    against the spell.
@@ -553,8 +553,11 @@ npc:
      
   special-equipment:
   - title: Ring of Evasion
+  - content:
   - title: Ring of Spell Turning
+  - content:
   - title: Ring of Regeneration
+  - content:
   - title: Amulet of the Planes
 
   profile:
